retrieveTarget/objects/sr3k4nth__c.object
<CustomObject>
    <description>Started app for enhancement of our learning</description>
    <fields>
        <fullName>AdvNum__c</fullName>
        <formula>SQRT( Number_Field__c )</formula>
        <label>AdvNum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <description>date field</description>
        <inlineHelpText>a</inlineHelpText>
        <label>Date1</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Field__c</fullName>
        <description>Number Field Te</description>
        <inlineHelpText>st</inlineHelpText>
        <label>Number_Field</label>
        <precision>8</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RichHTML__c</fullName>
        <description>HTML Hello</description>
        <inlineHelpText>HTML</inlineHelpText>
        <label>RichHTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <formula>text_field1__c &amp;  url_field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>formula__c</fullName>
        <description>math</description>
        <formula>Number_Field__c * 32</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rollno__c</fullName>
        <description>it is obj2 of name rollno</description>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>end users information can be displayed</inlineHelpText>
        <label>obj2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>text_field1__c</fullName>
        <description>this is test field test !!</description>
        <label>text_field1</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url_field__c</fullName>
        <description>url it</description>
        <inlineHelpText>url</inlineHelpText>
        <label>url_field</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>choomit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO# {00000000}</displayFormat>
        <label>choomit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>choomits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>